--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,6 @@ body {
     width: 430px;
     height: 56px;
     background: url("");
-    margin-left: 143px;
     float: left;
 }
 
@@ -81,7 +80,7 @@ body {
     width: 335px;
     float: left;
     height: 51px;
-    margin-left: 50px;
+    margin-left: 250px;
 }
     #register {
         width: 187px;
@@ -778,5 +777,6 @@ input[type=text]
     float: left;
     padding-left: 20px;
     position: relative;
-    top: -10px;
+    top: -50px;
+    height: 70px;
 }
